--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
         <div class="mb-3">
             <label class="form-label">Relative compactness</label>
             <input class="form-control" type="number" step="0.01" name="relative_compactness"
-                placeholder="Enter relative commpactness" />
+                placeholder="Enter relative compactness" />
         </div>
         <div class="mb-3">
             <label class="form-label">Surface area</label>
